--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url('../image/header-bg.jpeg');
+    background-image: url('header-bg.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
